ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parseIncompleteBinaryExpression1/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parseIncompleteBinaryExpression1/input.ts:1:9
  |
1 | var v = || b;
  |         ^^

